<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/textView19"
        android:layout_width="100dp"
        android:layout_height="?listPreferredItemHeightSmall"
        android:layout_marginTop="10dp"
        android:background="@color/color_red"
        android:gravity="center"
        android:text="@string/prev_sale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="100dp"
        android:layout_height="?listPreferredItemHeightSmall"

        android:background="@color/color_red"
        android:gravity="center"
        android:text="@string/sale_target"
        app:layout_constraintStart_toEndOf="@+id/textView19"
        app:layout_constraintTop_toTopOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="100dp"
        android:layout_height="?listPreferredItemHeightSmall"

        android:background="@color/color_red"
        android:gravity="center"
        android:text="@string/sale_ach"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="100dp"
        android:layout_height="?listPreferredItemHeightSmall"

        android:background="@color/color_red"
        android:gravity="center"
        android:text="@string/sale_ach_persent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="100dp"
        android:layout_height="?listPreferredItemHeightSmall"

        android:background="@color/color_red"
        android:gravity="center"
        android:text="@string/balance"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toTopOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="100dp"
        android:layout_height="?listPreferredItemHeightSmall"

        android:background="@color/color_red"
        android:gravity="center"
        android:text="@string/Comp"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toTopOf="@+id/textView17" />

</androidx.constraintlayout.widget.ConstraintLayout>